@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/21/25: Fixed use of beam shift cal from LM when in lowest nonLM EFTEM mag
+and allowed beam shift cal in TEM to be done at highest LM mag (In 4.1).
+
 2/19/25: SEM_4-1-21
 2/19/25: Prevented beam shift from being calibrated at mag indexes that are in
 LM for TEM and nonLM in EFTEM for FEI scopes (In 4.1).
